--- a/package.json
+++ b/package.json
@@ -16,26 +16,26 @@
   },
   "dependencies": {
     "env-cmd": "^10.1.0",
-    "next": "12",
-    "react": "17",
-    "react-dom": "17",
-    "tailwindcss": "^2.2.16"
+    "next": "^14.0.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "tailwindcss": "^3.3.5"
   },
   "devDependencies": {
     "@types/node": "20.9.0",
-    "@types/react": "17.0.27",
-    "@typescript-eslint/eslint-plugin": "^4.33.0",
-    "@typescript-eslint/parser": "^4.33.0",
+    "@types/react": "18.2.37",
+    "@typescript-eslint/eslint-plugin": "^6.10.0",
+    "@typescript-eslint/parser": "^6.10.0",
     "autoprefixer": "^10.3.7",
-    "contentful-management": "^7.42.3",
+    "contentful-management": "^11.5.0",
     "contentful-typescript-codegen": "^3.2.3",
-    "eslint": "7.32.0",
-    "eslint-config-next": "12",
-    "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-prettier": "^4.0.0",
-    "husky": "^7.0.0",
+    "eslint": "8.53.0",
+    "eslint-config-next": "^14.0.1",
+    "eslint-config-prettier": "^9.0.0",
+    "eslint-plugin-prettier": "^5.0.1",
+    "husky": "^8.0.3",
     "postcss": "^8.3.9",
-    "prettier": "^2.4.1",
-    "typescript": "4.4.3"
+    "prettier": "^3.0.3",
+    "typescript": "^5.2.2"
   }
 }
